--- a/Pipfile
+++ b/Pipfile
@@ -43,6 +43,7 @@ drf-yasg = "*"
 flower = ">=0.9.*"
 elastic-apm = "*"
 watchdog = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.7"
